--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>The Rick and Morty Tracker</title>
 	</head>
 	<body>
-		<div id="root"></div>
+		<div id="rick-and-morty-tracker"></div>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
 </html>
